-----------------

2007.09.xx | v3.0.2.3_CVS

FEATURE: UI   | Added "handshake reserved bytes" column in peer view [amc1]
FEATURE: UI   | Added "Open Transfer Bar on start" and "Remember Transfer Bar" location options [amc1]

CHANGE: Core  | Speedup hash-checking by ~30% / less CPU usage [The 8472]
CHANGE: UI    | Provide both "per-torrent" and "across-torrents" speed menu options [amc1]

BUGFIX: Core  | Fixed bug when trying to add torrents with semi-colon characters in filename [amc1]


2007.08.29 | v3.0.2.2

CHANGE: UI    | Improved usability of speed scale widget. [TuxPaper]
CHANGE: UI    | Restored reposition functionality of torrent context menus [TuxPaper]

BUGFIX: Core  | *nix: Allowing multi-instance now works again [TuxPaper]
BUGFIX: Core  | IPv6 DHT v4 pollution fix [Parg]
BUGFIX: UI    | MacOSX: Fixed not remembering user turned off Maximized state [TuxPaper]
BUGFIX: UI    | MacOSX: Fixed Drag and Drop for moving torrents in My Torrents view [TuxPaper]
BUGFIX: UI    | A few config pages had their labels missing [TuxPaper]



2007.08.16 | Azureus 3.0.2.0

FEATURE: Core | Act on suspend/resume events on Windows [Parg]
FEATURE: Core | Added new AZ message to inform of bad pieces [Parg]
FEATURE: Core | Added new stacked HAVE message to reduce peer-peer overhead [Parg]
FEATURE: Core | IPv6 support - dht, version server, tracker and improved transport [Parg]
FEATURE: UI   | New "Torrent" menu in the menu bar [amc1]
FEATURE: UI   | New "Piece Distribution" subview in the pieces tab [The 8472]
FEATURE: UI   | Auto-speed ping views in Tools->Statistics->Transfers when Auto Speed is enabled [Parg]
FEATURE: UI   | "Clear Resume Data" menu option added [amc1]
FEATURE: UI   | "Clear remembered save paths" option added (for the Open Torrent dialog) [amc1]

CHANGE: Core  | Optimise memory usage for single-file downloads [Parg]
CHANGE: Core  | Optimise memory usage for queued torrents (no need to keep resume data in memory) [Parg]